order/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  selector:
    matchLabels:
      app: order
  replicas: 1
  template:
    metadata:
      name: order
      labels:
        app: order
    spec:
      imagePullSecrets:
      - name: dockerhub      
      containers:
        - name: order
          image: docker.io/hiondal/order:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - name: order
      port: 8080
      targetPort: 18080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: order-hiondal.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: order
                port: 
                  number: 8080
